--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -9,5 +9,5 @@ type: Opaque
 stringData:
   # Replace these values with your actual OAuth credentials
   client-id: "flightctl-codeco"
-  client-secret: "hlrWi3dFEyxt6Uz8LAO0Ig8wJioBE2EG"
+  client-secret: ""
 
