--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -8,6 +8,6 @@ metadata:
 type: Opaque
 stringData:
   # Replace these values with your actual OAuth credentials
-  client-id: "flightctl-codeco"
+  client-id: ""
   client-secret: ""
 
